[package]
name = "worldgen"
description = "Noisemap and world generation library"
version = "0.4.0"
readme = "README.md"
authors = ["Samuel Sleight <samuel.sleight@gmail.com>"]
repository = "https://github.com/YeyaSwizaw/rust-worldgen"
documentation = "http://www.samuelsleight.co.uk/rust-docs/worldgen/worldgen"
license = "Apache-2.0"
edition = "2018"
