[package]
name = "worldgen"
description = "Noisemap and world generation library"
version = "0.5.2"
readme = "README.md"
authors = ["Samuel Sleight <samuel.sleight@gmail.com>"]
repository = "https://github.com/samuelsleight/rust-worldgen"
documentation = "https://docs.rs/worldgen/"
license = "Apache-2.0"
edition = "2018"
